--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 2.6.4)
 project(lshidraw)
-add_executable(lshidraw lshidraw.cpp)
+add_executable(lshidraw lshidraw.c)
 
