Add polldev utility, consolidate util functions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,10 +9,12 @@ if (NOT HAVE_HIDRAW)
 	message(FATAL_ERROR "Could not locate <linux/hidraw.h>")
 endif()
 
-add_executable(lshidraw lshidraw.c hexdump.c)
+add_executable(dumpdev dumpdev.c util.c)
+add_executable(lshidraw lshidraw.c util.c)
+add_executable(polldev polldev.c util.c)
 
-add_executable(dumpdev dumpdev.c hexdump.c)
 if (NOT ANDROID)
 	target_link_libraries(dumpdev rt)
+	target_link_libraries(lshidraw rt)
+	target_link_libraries(polldev rt)
 endif()
-
